--- a/public/css/booking-style.css
+++ b/public/css/booking-style.css
@@ -23,14 +23,14 @@
     justify-content: center;
 }
 
-.legend>h {
+.legend h1 {
     position: absolute;
     top: 25vh;
     color: navajowhite;
     font-size: 2em;
 }
 
-.theatre_room {
+.theatre-room {
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -84,13 +84,13 @@
     justify-content: center;
 }
 
-.booking_places {
+.booking-places {
     display: grid;
     height: 28vh;
     width: 28vh;
 }
 
-.row_armchair {
+.row-armchair {
     display: inline-flex;
     justify-content: center;
 }
@@ -99,13 +99,10 @@
     color: inherit;
 }
 
-.row_armchair>div {
+.row-armchair>div {
     position: relative;
     height: 100%;
     width: 100%;
-    display: grid;
-    justify-items: center;
-    align-content: center;
 }
 
 .armchair i:hover {
