--- a/public/css/glide-slide-main-page-style.css
+++ b/public/css/glide-slide-main-page-style.css
@@ -1,3 +1,8 @@
+.col-8 {
+    justify-content: center;
+    margin-top: 5vh;
+}
+
 .glide__slide {
     transform: scale(1) translateY(0);
     transition: 0.3s;
