--- a/public/css/spectacle-style.css
+++ b/public/css/spectacle-style.css
@@ -30,7 +30,7 @@
     justify-items: center;
 }
 
-.title>h {
+.title>h1 {
     padding-block-start: 0.5em;
     padding-block-end: 0.5em;
     font-size: 2em;
@@ -96,13 +96,13 @@
     overflow: auto;
 }
 
-h1 {
+.information-ticket h1 {
     color: white;
     align-items: center;
     justify-items: center;
 }
 
-h11 {
+.actors-block1 h3 {
     font-size: 2.5em;
     font-weight: bold;
     color: white;
