--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,19 +1,4 @@
-
-body {
-    margin: 0;
-    background: radial-gradient(circle, rgba(128,0,0,1) 20%, rgba(19,0,0,1) 60%);
-    height: 100vh;
-    width: 100vw;
-    overflow: hidden;
-    font-family: sans-serif;
-}
-
-.col-8 {
-    justify-content: center;
-    margin-top: 5vh;
-}
-
-.container {
+.container-login {
     margin: 0;
     width: 100%;
     height: 100%;
@@ -26,7 +11,7 @@ body {
     align-items: center;
 }
 
-.login_container {
+.login-container {
     margin-top: 7%;
     height: 30%;
     width: fit-content;
@@ -45,25 +30,21 @@ form {
     width: 25vw;
 }
 
-.register_info {
+.register-info {
     height: 5vh;
     width: 20vw;
-    margin-top: 5vh;
+    margin-bottom: 5vh;
     text-align: center;
     color: #2699FB;
     font-size: 2vh;
 }
 
-.register_info>li {
-    display: grid;
-    color: #2699FB;
-}
-.register_info>a  {
+.register-info {
     color: deepskyblue;
 }
 
-.register_info>a:hover {
-    color: white;
+a {
+    color: #2699FB;
 }
 
 .login input {
@@ -74,7 +55,7 @@ form {
     margin: 0.5em;
 }
 
-.button_login>button {
+.button-login button {
     display: grid;
     align-items: center;
     justify-content: center;
@@ -86,7 +67,7 @@ form {
     font-size: 1.5vh;
 }
 
-.button_login>button:hover {
+.button-login button:hover {
     transition-duration: 0.3s;
     border-color: white;
     background-color: #2699FB;
@@ -101,13 +82,13 @@ form {
     height: 9%;
 }
 
-.headline h {
-font-size: 7vh;
+.headline h1 {
+    font-size: 7vh;
 }
 
 
 @media only screen and (max-device-width: 420px){
-    .container {
+    .container-login {
         flex-direction: column;
         width: 130vw;
         height: 130vh;
