--- a/public/css/background-style.css
+++ b/public/css/background-style.css
@@ -50,6 +50,31 @@ body {
     opacity: 0;
 }
 
+.error-message {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: #00000050;
+}
+
+.error-div {
+    background: #000000;
+    border: 1px solid magenta;
+    border-radius: 3em;
+    color: magenta;
+    width: 20%;
+    height: 20%;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 @media only screen and (max-device-width: 420px){
     .container {
         flex-direction: column;
